# franka_marker

./: CMakeLists.txt  README.md  package.xml
scripts/: Tbase_to_ee.json  Tcamera_to_marker_1.json  Tcamera_to_marker_c.json  Tee_to_camera.json  Tmarker_to_ee.json  cartersian move.py  collect_20_config.py  collect_20_config_fx.py  ee_poses.json  grasp_vial.py  grasp_vial_fx.py  grasp_vial_ros_interface.py  grasp_vial_v1.py  grasp_vial_v1_fx.py  marker_function.py  publish_js_ee.py
scripts/config/: aruco_pose.txt  ee_pose.txt  joint_positions.txt  joint_positions_improved.txt
