<?xml version="1.0"?>
<package format="2">>
  <name>franka_marker</name>
  <version>0.7.1</version>
  <description>
    ROS/Python for calibration and grasping.
  </description>

  <maintainer email="zhouzx@liverpool.ac.uk">
    Zhengxue Zhou
  </maintainer>
  <license>Apache 2.0</license>

  <author>Zhengxue Zhou</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>smach</build_export_depend>
  <build_export_depend>smach_ros</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>


  <export>
  <!-- Other tools can request additional information be placed here -->
  <!--  <controller_interface plugin="${prefix}/state_controller_plugin.xml"/> -->
  </export>

</package>